Support  agg and label mode and new model for patterns command
Signed-off-by: Songkan Tang <songkant@amazon.com>